@@ -1,3 +1,8 @@
+2003-04-07  Philippe Elie  <phil.el@wanadoo.fr>
+
+	* libutil++/string_manip.cpp: work around for gcc 2.95
+	* p/op_to_source.cpp: minor cleanup
+
 2003-04-07  John Levon  <levon@movementarian.org>
 
 	* pp/op_to_source.cpp: cheat a bit to get
